refactor: encapsulate retrieving last wish to Child